# eecs398_search_engine

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  DownloadHTML.cpp  DownloadHTML.hpp  GetSSL.hpp  LinuxGetSSL.cpp  README.md  WORKSPACE  adjacency_list_format.txt  anchor_text_format.txt  bad_results.html  fbvector.cpp  map.hpp  meson.build  notes  openssl.BUILD  parser.hpp  queue.hpp  run.sh  script_for_ani.py  script_for_ani3.py  script_for_any2.py  script_to_merge_index_for_ani.py  search_results.html  set.hpp  stddef.hpp  stored_pages_format.txt  string.hpp  test_parser.cpp  title.html  unordered_map.hpp  url_list_format.txt  vector.hpp  zlib.BUILD
Seeds/: setup.sh  urls.txt
crawler_files/: urlstore
etc/Seeds/: main.py  newUrls.txt  q.txt  result.txt  searched.txt  urls.txt
frontend/: page_not_found.html  rain.js  search.js  search_results.html  title.html
html/: url.hpp
include/: debug.hpp  meson.build
include/bolt/: bolt.hpp  bolt_impl.hpp  buffered_reader.hpp  constants.hpp  html_page.hpp  meson.build
include/bolt/http/: http_connection_handler.hpp  http_connection_handler_factory.hpp  http_request.hpp  socket_http_connection_handler.hpp
include/disk/: .UrlTables.hpp.swp  HardCodedFileNames.hpp  Robots.hpp  UrlInfo.hpp  UrlTables.hpp  adj_store.hpp  anchor_store.hpp  constants.hpp  disk_vec.hpp  frontier.hpp  logfile.hpp  offset_lookup.hpp  page_store.hpp  url_store.hpp
include/fb/: algorithm.hpp  bloom_filter.hpp  cv.hpp  exception.hpp  file_descriptor.hpp  functional.hpp  indexEntry.hpp  indexEntryImpl.hpp  iterator.hpp  map.hpp  meson.build  mutex.hpp  no_delete_unordered_map.hpp  priority_queue.hpp  queue.hpp  set.hpp  shared_mutex.hpp  stddef.hpp  string.hpp  string_list.hpp  string_view.hpp  thread.hpp  type_traits.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp  view.hpp
include/fb/algorithm/: copy.hpp  fill.hpp  find.hpp  min_element.hpp
include/fb/iterator/: data.hpp  operations.hpp  reverse.hpp  size.hpp
include/fb/memory/: default_delete.hpp  misc.hpp  shared_ptr.hpp  uninitialized.hpp  unique_ptr.hpp
include/fb/string/: main.hpp  numeric.hpp  operators.hpp
include/http/: DownloadHTML.hpp  UrlInfo.hpp  download_html.hpp
include/index/: index_builder.hpp  index_chunk_builder.hpp  index_data_structures.hpp  index_helpers.hpp  index_merger.hpp  meson.build  posting_list_builder.hpp  test_index_builder.hpp
include/isr/: and_isr.hpp  constraint_solver.hpp  container_isr.hpp  document_isr.hpp  empty_isr.hpp  index_reader.hpp  index_reader_helpers.hpp  isr.hpp  meson.build  or_isr.hpp  (+3 more)
index/: BUILD  index_builder.hpp  index_chunk_builder.hpp  index_data_structures.hpp  index_test.cpp  posting_list_builder.hpp  test_index_builder.hpp  words_in_vector.txt
lib/: BUILD  Exception.hpp  SavedLists.hpp  SavedObject.hpp  SavedStrings.hpp  TCPUtility.hpp  algorithm.hpp  cstring.hpp  cv.hpp  file_descriptor.hpp  frontier_pool.cpp  frontier_pool.hpp  functional.hpp  indexEntry.hpp  indexEntryImpl.hpp  iterator.hpp  limits.hpp  main.cpp  map.hpp  master_url_tcp.cpp  master_url_tcp.hpp  memory.hpp  mutex.hpp  offset_lookup.hpp  priority_queue.hpp  queue.hpp  saved_adjlist.hpp  saved_urls.hpp  set.hpp  slave_url_tcp.cpp  slave_url_tcp.hpp  stddef.hpp  string.hpp  string_pool.cpp  string_pool.hpp  string_view.hpp  testIndexEntry.cpp  test_compile.cpp  test_frontier.cpp  test_master_tcp.cpp  (+19 more)
memory/: default_delete.hpp  shared_ptr.hpp  unique_ptr.hpp
parser/: parser.hpp  test_parser.cpp
scripts/: check_documents.sh
src/: '  .frontier.cpp.swp  .meson.build.swp  adj_store.cpp  anchor_store.cpp  build_index.cpp  build_index_chunk.cpp  debug.cpp  document_isr.cpp  download_html.cpp  empty_isr.cpp  frontier.cpp  handle_socket.cpp  index_reader.cpp  index_stats.cpp  logfile.cpp  master_driver.cpp  master_url_tcp.cpp  merge_index.cpp  meson.build  page_store.cpp  page_store_check.cpp  page_store_merge.cpp  page_store_total.cpp  parser.cpp  queryServer.cpp  query_handler.cpp  query_result.cpp  query_server_driver.cpp  query_worker_driver.cpp  ranker.cpp  ranker_test.cpp  search_index.cpp  server.cpp  url_store.cpp  url_tables.cpp  url_tcp.cpp  word_impl_isr.cpp  worker_driver.cpp  worker_url_tcp.cpp
src/bolt/: bolt.cpp  buffered_reader.cpp  html_page.cpp
src/bolt/http/: http_connection_handler_factory.cpp  http_request.cpp  socket_http_connection_handler.cpp
src/crawler/: AdjStore.cpp  AdjStore.hpp  AnchorStore.cpp  AnchorStore.hpp  DiskList.hpp  DiskVec.hpp  DownloadHTML.cpp  DownloadHTML.hpp  Frontier.cpp  Frontier.hpp  MasterDriver.cpp  PageStore.cpp  PageStore.hpp  ParserDriver.cpp  ProcessUrls.cpp  Robots.hpp  UrlInfo.hpp  UrlStore.cpp  UrlStore.hpp  UrlTables.cpp  UrlTables.hpp  WorkerDriver.cpp  a.out  frontier_pool.cpp  frontier_pool.hpp  handle_socket.cpp  handle_socket.hpp  master_url_tcp.cpp  master_url_tcp.hpp  offset_lookup.hpp  parser.hpp  regex.hpp  string_pool.cpp  string_pool.hpp  test_DownloadHTML.cpp  test_master_tcp.cpp  test_worker_tcp.cpp  url_pool.cpp  url_pool.hpp  url_tcp.cpp  (+3 more)
src/crawler/parser/: test_parser.cpp
src/index/: Index0  PageStore0  indexEntry.hpp  index_builder.hpp  index_chunk_builder.hpp  index_data_structures.hpp  index_helpers.hpp  index_test.cpp  merged_index_test.cpp  posting_list_builder.hpp  print_page_store.cpp  reverse_word_index_format.txt  test_index_builder.hpp  words_in_vector.txt
src/lib/: BUILD  map.hpp  set.hpp
src/memory/: unique_ptr.hpp  unique_ptr_base.hpp
src/urlPool/: README  UrlStorage.cpp  UrlStorage.hpp  frontierPool.cpp  frontierPool.hpp  frontierStorage.cpp  url_pool.cpp  url_pool.hpp
test/: BUILD  isr_example.cpp  jaeyoon_string_test.cpp  meson.build  set_test.cpp  test-bloomfilter-1.cpp  test-pagestore.cpp  test-robots-1.cpp  test-robots-2-http.cpp  test-robotstxt.cpp  test-tokenstream.cpp  test_download.cpp  test_master_tcp.cpp  test_no_delete.cpp  test_parser.cpp  test_queryparser.cpp
test/old/: test_save_list.cpp  test_url_ranking.cpp
tests/: test_frontier.cpp  test_parser.cpp  test_shared_ptr.cpp
unordered_containers/: unordered_map.hpp
(+35 files in other folders)
