master_driver = files('master_driver.cpp')
worker_driver = files('worker_driver.cpp')
page_store_total_driver = files('page_store_total.cpp')
master_source_files += files('adj_store.cpp', 'anchor_store.cpp', 'frontier.cpp',
                             'handle_socket.cpp', 'url_tcp.cpp', 'master_url_tcp.cpp',
                             'url_store.cpp', 'url_tables.cpp', 'debug.cpp',
                             'logfile.cpp')
worker_source_files += files('worker_url_tcp.cpp', 'url_tcp.cpp',
                             'page_store.cpp', 'download_html.cpp',
                             'debug.cpp', 'logfile.cpp', 'parser.cpp')
