project_header_files += files('bolt_impl.hpp', 'bolt.hpp', 'buffered_reader.hpp',
                              'constants.hpp', 'html_page.hpp', 'http/http_connection_handler.hpp',
                              'http/http_connection_handler_factory.hpp', 'http/http_request.hpp',
                              'http/socket_http_connection_handler.hpp')