project_header_files += files('queue.hpp', 'thread.hpp', 'iterator.hpp',
                              'set.hpp', 'type_traits.hpp', 'limits.hpp',
                              'stddef.hpp', 'unordered_map.hpp', 'Exception.hpp',
                              'map.hpp', 'unordered_set.hpp', 'string.hpp',
                              'utility.hpp', 'algorithm.hpp', 'memory.hpp',
                              'string_view.hpp', 'vector.hpp', 'cv.hpp',
                              'view.hpp', 'file_descriptor.hpp', 'mutex.hpp',
                              'functional.hpp', 'priority_queue.hpp', 'no_delete_unordered_map.hpp')
