project_header_files += files('index_builder.hpp',
                              'index_merger.hpp',
                              'index_chunk_builder.hpp',
                              'index_data_structures.hpp',
                              'index_helpers.hpp',
                              'posting_list_builder.hpp',
                              'test_index_builder.hpp')